fix: rewrap pagination item (#36)

--- a/src/components/Paginator/Paginator.scss
+++ b/src/components/Paginator/Paginator.scss
@@ -15,6 +15,8 @@ $itemDimensions: 44px;
 
     &__link {
         text-decoration: none;
+        pointer-events: none;
+        color: var(--yc-color-text-primary);
     }
 
     &__item {
